Released the true Quantified API V2. More information in `changelog.md` :DDD